# trading-platform

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py
app/api/views/: trading_statistics.py
app/data_structures/: exceptions.py  segment_tree.py
app/services/: exceptions.py  trading_statistics.py
postman/: TradingPlatformAPI.postman_collection.json
tests/: conftest.py
tests/api/views/: test_trading_statistics.py
tests/data_structures/: test_segment_tree.py
tests/services/: test_trading_statistics.py
