[tool.poetry]
name = "trading-platform"
version = "0.1.0"
description = ""
authors = ["Dimitris Koutsonikolis <koutsonikolisdim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
